2010-10-14
    * Swedish translation, thanks to Magnus Johansson
    * Shortcuts are now untranslatable
    * Preliminary CPack support
     
2010-10-05
    * Dutch translation, thanks to Wouter Reckman

2010-10-04
    * release 0.3.3 

2010-10-01
    * Buildsystem updates
    * exclude unmaintained translations from builds and distribution

2010-09-29
    * Set an application icon for Linux
    * Display the tooltips over the knobs and sliders instead of the mouse pos.
    * Language variants support fix 
    * PianoScene fix: refactored allowing to trigger hidden keys

2010-09-28
    * Translation updates

2010-09-26
    * Process incoming controller events: all sounds off, all notes off, 
      reset all controllers.
      
2010-09-25
    * About translation dialog
    * Dynamic language change without restart

2010-09-24
    * New option: Translate MIDI velocity into key pressed color tint 

2010-09-23
    * Language menu to select another language
    * (Linux) translation files moved to $prefix/share/vmpk/locale

2010-09-22
    * Tool shortcuts 

2010-09-21
    * Shortcuts editor dialog (from Qtractor, by Rui Nuno Capela)  

2010-06-18
    * release 0.3.2

2010-06-12
    * basic d-bus service

2010-06-09
    * Chinese language translation by Rui Fan

2010-04-13
    * German translation of manual added, edited document provided by 
      Philip Edelmann

2010-03-13
    * Larger shapes for switch extra controls, when using the custom qstyle.

2010-02-23
    * Fixed German note names: English note B as H in German, 
      and English B♭ as B in German
    * Install a compressed SVGZ icon instead of the plain one
    * Note for Linux users, regarding docbook XSLT and man page.

2010-02-20
    * RtMIDI updated to 1.0.11 
    * Compile using QT_STRICT_ITERATORS

2009-12-15
    * Explicit link against -framework Carbon in Mac OSX
    * Release 0.3.1
    
2009-12-14
    * Czech translation, by Pavel Fric
 
2009-12-12
    * French and German translations updated
    