@@ -1,3 +1,6 @@
+2010-11-20
+    * French translation (web site and help page) thanks to Nicolas Froment
+ 
 2010-10-14
     * Swedish translation, thanks to Magnus Johansson
     * Shortcuts are now untranslatable
